# static_ptr

./: CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  benchmark.cc
include/: CMakeLists.txt  static_ptr.h
test/: CMakeLists.txt  test_buffer_size.cc  test_derived.cc
